# ai-agent

./: .gitignore  CLAUDE.md  README.md  notebooklm-project.skill  pyproject.toml
.agents/plugins/: marketplace.json
.agents/skills/: odoo-architecture  odoo-build  odoo-business-accounting  odoo-business-expenses  odoo-business-hr  odoo-business-inventory  odoo-business-manufacturing  odoo-business-purchase  odoo-business-sales  odoo-business-timesheet-project-services  odoo-business-website-ecommerce  odoo-delivery-ops  odoo-integration-api  odoo-local-test-harness  odoo-orm-modeling  odoo-performance  odoo-plan  odoo-reflect  odoo-review  odoo-security  odoo-ship  odoo-test  odoo-testing-reference  odoo-think  odoo-upgrade-migration  odoo-view-ui  pylint-code-review
.claude/: settings.json  subagent-rules.md
.claude-plugin/: marketplace.json  plugin.json
.claude/skills/: README.md  evaluation-harness.md  library-manifest.md  (+3 more)
.codex-plugin/: plugin.json
docs/: install.md  project-setup.md
issue-resolution/: SKILL.md  mcp.json
knowledge/: SKILL.md  mcp.json
notebooklm-project/: SKILL.md
odoo-developer/: SKILL.md
odoo-knowledge/: SKILL.md
odoo-planning/: SKILL.md
odoo-test/: SKILL.md
orchestrator/: SKILL.md  mcp.json
planning/: SKILL.md
pylint-code-review/: SKILL.md
skills/: cavecrew  caveman-compress  caveman-help  caveman-stats  odoo-paths.md
tooling/: build_plugin.py  cli.py  install_plugin.py  inventory.py  local_setup_common.py  project_setup.py  setup_local.py  smoke_install.py  validate_plugin.py
worker/: SKILL.md  mcp.json
(+310 files in other folders)
